--- a/admin_dashboard.html
+++ b/admin_dashboard.html
@@ -673,9 +673,9 @@
                     creator: 'Raj Singh',
                     brand: 'TechHub',
                     status: 'active',
-                    value: '₹80 Thousands',
+                    value: '₹5000 - ₹20000  Thousands',
                     progress: '40%',
-                    endDate: '2024-12-20',
+                    endDate: '2025-04-23',
                     ratings: null
                 } // New Collaboration
             ],
